--- a/style.css
+++ b/style.css
@@ -37,12 +37,14 @@ a {
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 700;
+    flex: 1;
     display: flex;
     flex-direction: column;
 }
 
 .hero {
     justify-content: space-around;
+    gap: 64px;
     padding: 100px;
 }
 
@@ -55,6 +57,7 @@ a {
     width: 700px;
     height: 300px;
     background-color: lightgray;
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
